--- a/versions/latest/modules/en/pages/faq/general-faq.adoc
+++ b/versions/latest/modules/en/pages/faq/general-faq.adoc
@@ -36,6 +36,6 @@ We don't currently plan on providing embedded Traefik support, but we're still e
 
 Our goal is to run any Kubernetes clusters. Therefore, Rancher v2.x should work with OpenShift, but we haven't tested it yet.
 
-== Is Longhorn integrated with Rancher?
+== Is {longhorn-product-name} integrated with Rancher?
 
 Yes. Longhorn is integrated with Rancher v2.5 and later.
