--- a/versions/latest/modules/zh/pages/cluster-admin/manage-clusters/persistent-storage/manage-persistent-storage.adoc
+++ b/versions/latest/modules/zh/pages/cluster-admin/manage-clusters/persistent-storage/manage-persistent-storage.adoc
@@ -36,7 +36,7 @@
 
 有关详细信息和先决条件，请参阅xref:cluster-admin/manage-clusters/persistent-storage/dynamically-provision-new-storage.adoc[此页面]。
 
-== Longhorn 存储
+== {longhorn-product-name} 存储
 
 https://longhorn.io/[Longhorn] 是一个轻量级、可靠、易用的 Kubernetes 分布式块存储系统。
 
