--- a/versions/latest/modules/zh/pages/integrations/longhorn/overview.adoc
+++ b/versions/latest/modules/zh/pages/integrations/longhorn/overview.adoc
@@ -19,7 +19,7 @@ Longhorn 是免费的开源软件。它最初由 Rancher Labs 开发，现在被
 
 image:longhorn-screenshot.png[Longhorn 仪表板]
 
-== 使用 Rancher 安装 Longhorn
+== 使用 Rancher 安装 {longhorn-product-name}
 
 . 满足所有link:https://longhorn.io/docs/latest/deploy/install/#installation-requirements[安装要求]。
 . 转到要安装 Longhorn 的集群。
@@ -31,14 +31,14 @@ image:longhorn-screenshot.png[Longhorn 仪表板]
 
 *结果*：Longhorn 已部署到 Kubernetes 集群中。
 
-== 从 Rancher UI 访问 Longhorn
+== 从 Rancher UI 访问 {longhorn-product-name}
 
 . 转到安装了 Longhorn 的集群。在左侧导航菜单中，单击 *Longhorn*。
 . 在此页面上，你可以编辑 Longhorn 管理的 Kubernetes 资源。要查看 Longhorn UI，请单击**概述**中的 *Longhorn* 按钮。
 
 *结果*：你将转到 Longhorn UI，在这里你可以管理 Kubernetes 集群中的 Longhorn 卷及其副本，以及可能存在于另一个 Kubernetes 集群或 S3 中的 Longhorn 存储辅助备份。
 
-== 从 Rancher UI 卸载 Longhorn
+== 从 Rancher UI 卸载 {longhorn-product-name}
 
 . 转到安装了 Longhorn 的集群，然后单击 *Apps*。
 . 点击**已安装的应用**。
