--- a/versions/latest/modules/en/pages/integrations/longhorn/overview.adoc
+++ b/versions/latest/modules/en/pages/integrations/longhorn/overview.adoc
@@ -19,7 +19,7 @@ With Longhorn, you can:
 
 image:longhorn-screenshot.png[Longhorn Dashboard]
 
-== Installing Longhorn with Rancher
+== Installing {longhorn-product-name} with Rancher
 
 . Fulfill all https://longhorn.io/docs/latest/deploy/install/#installation-requirements[Installation Requirements.]
 . Go to the cluster where you want to install Longhorn.
@@ -31,14 +31,14 @@ image:longhorn-screenshot.png[Longhorn Dashboard]
 
 *Result:* Longhorn is deployed in the Kubernetes cluster.
 
-== Accessing Longhorn from the Rancher UI
+== Accessing {longhorn-product-name} from the Rancher UI
 
 . Go to the cluster where Longhorn is installed. In the left navigation menu, click *Longhorn*.
 . On this page, you can edit Kubernetes resources managed by Longhorn. To view the Longhorn UI, click the *Longhorn* button in the *Overview* section.
 
 *Result:* You will be taken to the Longhorn UI, where you can manage your Longhorn volumes and their replicas in the Kubernetes cluster, as well as secondary backups of your Longhorn storage that may exist in another Kubernetes cluster or in S3.
 
-== Uninstalling Longhorn from the Rancher UI
+== Uninstalling {longhorn-product-name} from the Rancher UI
 
 . Go to the cluster where Longhorn is installed and click *Apps*.
 . Click *Installed Apps*.
