--- a/versions/v2.8/modules/en/pages/cluster-admin/manage-clusters/persistent-storage/manage-persistent-storage.adoc
+++ b/versions/v2.8/modules/en/pages/cluster-admin/manage-clusters/persistent-storage/manage-persistent-storage.adoc
@@ -36,7 +36,7 @@ The overall workflow for provisioning new storage is as follows:
 
 For details and prerequisites, refer to xref:cluster-admin/manage-clusters/persistent-storage/dynamically-provision-new-storage.adoc[this page.]
 
-== Longhorn Storage
+== {longhorn-product-name} Storage
 
 https://longhorn.io/[Longhorn] is a lightweight, reliable and easy-to-use distributed block storage system for Kubernetes.
 
