Use NeuVector branding name

--- a/versions/latest/modules/en/pages/security/security-overview.adoc
+++ b/versions/latest/modules/en/pages/security/security-overview.adoc
@@ -19,7 +19,7 @@ Security is at the heart of all Rancher features. From integrating with all the 
 
 On this page, we provide security related documentation along with resources to help you secure your Rancher installation and your downstream Kubernetes clusters.
 
-== NeuVector Integration with Rancher
+== {neuvector-product-name} Integration with Rancher
 
 NeuVector is an open-source, container-focused security application that is now integrated into Rancher. NeuVector provides production security, DevOps vulnerability protection, and a container firewall, et al. Please see the xref:integrations/neuvector/neuvector.adoc[Rancher docs] and the https://open-docs.neuvector.com/[NeuVector docs] for more information.
 
