--- a/versions/latest/modules/zh/pages/integrations/neuvector/overview.adoc
+++ b/versions/latest/modules/zh/pages/integrations/neuvector/overview.adoc
@@ -1,13 +1,13 @@
 = 概述
 :experimental:
 
-== Rancher 中的 NeuVector 集成
+== Rancher 中的 {neuvector-product-name} 集成
 
 https://open-docs.neuvector.com/[NeuVector 5.x] 是一个开源的，以容器为中心的安全应用程序，Rancher 已集成 NeuVector。NeuVector 在运行时为关键应用程序和数据提供实时的合规、可见和保护功能。NeuVector 提供具有 CIS Benchmark 和漏洞扫描的防火墙、容器进程/文件系统监控和安全审计。有关 Rancher 安全性的更多信息，请参阅xref:security/security-overview.adoc[安全文档]。
 
 NeuVector 可以通过 Helm Chart 启用。你可以在 *Apps* 或 Rancher UI 中的 *Cluster Tools* 中安装该 Chart。安装 Helm Chart 后，用户可以轻松地link:https://open-docs.neuvector.com/deploying/rancher#deploy-and-manage-neuvector-through-rancher-apps-marketplace[在 Rancher 中部署和管理 NeuVector 集群]。
 
-== 使用 Rancher 安装 NeuVector
+== 使用 Rancher 安装 {neuvector-product-name}
 
 Harvester Helm Chart 用于管理 Rancher 中 NeuVector UI 的访问，用户可以在 Rancher 中直接跳转，然后部署和管理 NeuVector 集群。
 
@@ -39,12 +39,12 @@ Harvester Helm Chart 用于管理 Rancher 中 NeuVector UI 的访问，用户可
 . 点击左侧导航栏底部的**集群工具**。
 . 按照上面的步骤 4 相应地选择你的容器运行时，然后再次单击**安装**。
 
-== 从 Rancher UI 访问 NeuVector
+== 从 Rancher UI 访问 {neuvector-product-name}
 
 . 导航到安装了 NeuVector 的集群的 Cluster Explorer。在左侧导航栏中，单击 *NeuVector*。
 . 单击外部链接以转到 NeuVector UI。选择链接后，用户必须接受``最终用户许可协议``才能访问 NeuVector UI。
 
-== 从 Rancher UI 卸载 NeuVector
+== 从 Rancher UI 卸载 {neuvector-product-name}
 
 *通过 Apps 卸载：*
 
