--- a/versions/v2.8/modules/en/pages/integrations/neuvector/overview.adoc
+++ b/versions/v2.8/modules/en/pages/integrations/neuvector/overview.adoc
@@ -5,7 +5,7 @@ https://open-docs.neuvector.com/[NeuVector 5.x] is an open-source container-cent
 
 NeuVector can be enabled through a Helm chart that may be installed either through *Apps* or through the *Cluster Tools* button in the Rancher UI. Once the Helm chart is installed, users can easily https://open-docs.neuvector.com/deploying/rancher#deploy-and-manage-neuvector-through-rancher-apps-marketplace[deploy and manage NeuVector clusters within Rancher].
 
-== Installing NeuVector with Rancher
+== Installing {neuvector-product-name} with Rancher
 
 The Harvester Helm Chart is used to manage access to the NeuVector UI in Rancher where users can navigate directly to deploy and manage their NeuVector clusters.
 
@@ -41,12 +41,12 @@ Only one container runtime engine may be selected at a time during installation.
 . Click on *Cluster Tools* at the bottom of the left navigation bar.
 . Repeat step 4 above to select your container runtime accordingly, then click *Install* again.
 
-== Accessing NeuVector from the Rancher UI
+== Accessing {neuvector-product-name} from the Rancher UI
 
 . Navigate to the cluster explorer of the cluster where NeuVector is installed. In the left navigation bar, click *NeuVector*.
 . Click the external link to go to the NeuVector UI. Once the link is selected, users must accept the `END USER LICENSE AGREEMENT` to access the NeuVector UI.
 
-== Uninstalling NeuVector from the Rancher UI
+== Uninstalling {neuvector-product-name} from the Rancher UI
 
 *To uninstall from Apps:*
 
