--- a/versions/v2.8/modules/en/pages/integrations/neuvector/neuvector.adoc
+++ b/versions/v2.8/modules/en/pages/integrations/neuvector/neuvector.adoc
@@ -1,8 +1,8 @@
-= Container Security with NeuVector
+= {neuvector-product-name}
 
 NeuVector is the only 100% open source, Zero Trust container security platform. Continuously scan throughout the container lifecycle. Remove security roadblocks. Bake in security policies at the start to maximize developer agility. NeuVector provides vulnerability and compliance scanning and management from build to production. The unique NeuVector run-time protection protects network connections within and ingress/egress to the cluster with a Layer7 container firewall. Additionally, NeuVector monitors process and file activity in containers and on hosts to stop unauthorized activity.
 
-== NeuVector with Rancher
+== {neuvector-product-name} with Rancher
 
 All NeuVector features are available through Rancher with integrated deployment and single-sign on to the NeuVector console. Rancher cluster admins are able to deploy and manage the NeuVector deployment on their clusters and easily configure NeuVector through Helm values, configMaps, custom resource definitions (CRDs) and the NeuVector console.
 
@@ -11,7 +11,7 @@ With NeuVector and Rancher:
 * Deploy, manage and secure multiple clusters.
 * Manage and report vulnerabilities and compliance results for Rancher workloads and nodes.
 
-== NeuVector Prime with Rancher Prime
+== {neuvector-product-name} Prime with Rancher Prime
 
 The NeuVector UI Extension for Rancher Manager is available and supported for Rancher Prime and NeuVector Prime customers. This extension provides:
 
