--- a/versions/v2.8/modules/zh/pages/security/security-overview.adoc
+++ b/versions/v2.8/modules/zh/pages/security/security-overview.adoc
@@ -19,7 +19,7 @@
 
 本文介绍了安全相关的文档以及资源，让你的 Rancher 安装和下游 Kubernetes 集群更加安全。
 
-== NeuVector 与 Rancher 的集成
+== {neuvector-product-name} 与 Rancher 的集成
 
 NeuVector 是一个开源的、以容器为中心的安全应用程序，现已集成到 Rancher 中。NeuVector 提供生产安全、DevOps 漏洞保护和容器防火墙等功能。请参阅 xref:integrations/neuvector/neuvector.adoc[Rancher 文档] 和 https://open-docs.neuvector.com/[NeuVector 文档]了解更多信息。
 
