Use Kubewarden branding name

--- a/versions/latest/modules/en/pages/integrations/kubewarden.adoc
+++ b/versions/latest/modules/en/pages/integrations/kubewarden.adoc
@@ -1,4 +1,4 @@
-= Advanced Policy Management with Kubewarden
+= {kubewarden-product-name}
 
 Kubewarden is a Policy Engine that secures and helps manage your cluster resources. It allows for validation and mutation of resource requests via policies, including context-aware policies and verifying image signatures. It can run policies in monitor or enforcing mode and provides an overview of the state of the cluster.
 
@@ -10,13 +10,13 @@ Kubewarden aims to be the Universal Policy Engine by enabling and simplifying Po
 * Cluster Operator: Kubewarden is modular (OCI registry, PolicyServers, Audit Scanner, Controller). Configure your deployment to suit your needs, segregating different tenants. Get an overview of past, current, and possible violations across the cluster with the Audit Scanner and the PolicyReports.
 * Kubewarden Integrator: use it as a platform to write new Kubewarden modules and custom policies.
 
-== Kubewarden with Rancher
+== {kubewarden-product-name} with Rancher
 
 Kubewarden's upstream Helm charts are fully integrated as Rancher Apps, providing a UI for the install options. The charts also come with defaults that respect the Rancher stack (for example: not policing Rancher system namespaces), and default PolicyServer and Policies. Users have access to all Kubewarden features and can deploy PolicyServers and Policies manually by interacting with the Kubernetes API (e.g.: using kubectl).
 
 Kubewarden provides a full replacement of the removed Kubernetes Pod Security Policies. Kubewarden also integrates with the new Pod Security Admission feature introduced by a recent version of Kubernetes by augmenting its security capabilities.
 
-== Kubewarden with Rancher Prime
+== {kubewarden-product-name} with Rancher Prime
 
 The available Rancher UI Extension for Kubewarden integrates it into the Rancher UI. The UI Extension automates the installation and configuration of the Kubewarden stack and configures access to the policies maintained by SUSE. The UI Extension provides access to a curated catalog of ready-to-use policies. Using the UI Extension, one can browse, install, and configure these policies.
 
