--- a/versions/latest/modules/en/pages/integrations/elemental.adoc
+++ b/versions/latest/modules/en/pages/integrations/elemental.adoc
@@ -1,8 +1,8 @@
-= Operating System Management with Elemental
+= {elemental-product-name}
 
 Elemental enables cloud-native host management. Elemental allows you to onboard any machine in any location, whether its in a datacenter or on the edge, and integrate them seamlessly into Kubernetes while managing your workflows (e.g., OS updates).
 
-== Elemental with Rancher
+== {elemental-product-name} with Rancher
 
 Elemental in Rancher:
 
@@ -12,13 +12,13 @@ Elemental in Rancher:
 * Allows OCI Image-based flows, which are trusted, deterministic, and predictable.
 * Works at scale. It enables fleet-sized OS management.
 
-=== When should I use Elemental?
+=== When should I use {elemental-product-name}?
 
 * Elemental enables cloud-native OS management from Rancher manager. It works with any OS (e.g., SLE Micro vanilla).
 * Elemental allows cloud-native management for machines in datacenters and on the edge.
 * Elemental is flexible and allows platform teams to perform all kind of workflows across their fleet of machines.
 
-== Elemental with Rancher Prime
+== {elemental-product-name} with Rancher Prime
 
 * Deeply integrated already as GUI Extension in Rancher.
 * Extends the Rancher story to the OS. Working perfectly with SLE Micro for Rancher today.
