Use K3s branding name

--- a/versions/latest/modules/en/pages/cluster-deployment/configuration/k3s.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/configuration/k3s.adoc
@@ -1,4 +1,4 @@
-= K3s Cluster Configuration Reference
+= {k3s-product-name} Cluster Configuration Reference
 
 This section covers the configuration options that are available in Rancher for a new or existing K3s Kubernetes cluster.
 
