--- a/versions/latest/modules/en/pages/cluster-deployment/register-existing-clusters.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/register-existing-clusters.adoc
@@ -114,7 +114,7 @@ After registering a cluster, the cluster owner can:
 * Enable xref:observability/istio/istio.adoc[Istio]
 * Manage projects and workloads
 
-=== Additional Features for Registered RKE2 and K3s Clusters
+=== Additional Features for Registered RKE2 and {k3s-product-name} Clusters
 
 https://rancher.com/docs/k3s/latest/en/[K3s] is a lightweight, fully compliant Kubernetes distribution for edge installations.
 https://docs.rke2.io[RKE2] is Rancher's next-generation Kubernetes distribution for datacenter and cloud installations.
@@ -140,7 +140,7 @@ When you create an EKS, AKS, or GKE cluster in Rancher, then delete it, Rancher 
 
 See xref:cluster-deployment/cluster-deployment.adoc[Cluster Management Capabilities by Cluster Type] for more information about what features are available for managing registered clusters.
 
-== Configuring RKE2 and K3s Cluster Upgrades
+== Configuring RKE2 and {k3s-product-name} Cluster Upgrades
 
 [TIP]
 ====
@@ -158,7 +158,7 @@ In the RKE2 and K3s documentation, controlplane nodes are called server nodes. T
 
 Also in the RKE2 and K3s documentation, nodes with the worker role are called agent nodes. Any workloads or pods that are deployed in the cluster can be scheduled to these nodes by default.
 
-== Debug Logging and Troubleshooting for Registered RKE2 and K3s Clusters
+== Debug Logging and Troubleshooting for Registered RKE2 and {k3s-product-name} Clusters
 
 Nodes are upgraded by the system upgrade controller running in the downstream cluster. Based on the cluster configuration, Rancher deploys two https://github.com/rancher/system-upgrade-controller#example-upgrade-plan[plans] to upgrade nodes: one for controlplane nodes and one for workers. The system upgrade controller follows the plans and upgrades the nodes.
 
@@ -180,7 +180,7 @@ If the cluster becomes stuck in upgrading, restart the `system-upgrade-controlle
 
 To prevent issues when upgrading, the https://kubernetes.io/docs/tasks/administer-cluster/kubeadm/kubeadm-upgrade/[Kubernetes upgrade best practices] should be followed.
 
-== Authorized Cluster Endpoint Support for RKE2 and K3s Clusters
+== Authorized Cluster Endpoint Support for RKE2 and {k3s-product-name} Clusters
 
 Rancher supports Authorized Cluster Endpoints (ACE) for registered RKE2 and K3s clusters. This support includes manual steps you will perform on the downstream cluster to enable the ACE. For additional information on the authorized cluster endpoint, click xref:cluster-admin/manage-clusters/access-clusters/authorized-cluster-endpoint.adoc[here].
 
