--- a/versions/latest/modules/en/pages/security/hardening-guides/k3s/k3s.adoc
+++ b/versions/latest/modules/en/pages/security/hardening-guides/k3s/k3s.adoc
@@ -1,4 +1,4 @@
-= K3s Hardening Guides
+= {k3s-product-name} Hardening Guides
 
 This document provides prescriptive guidance for how to harden a K3s cluster intended for production, before provisioning it with Rancher. It outlines the configurations and controls required for Center for Information Security (CIS) Kubernetes benchmark controls.
 
@@ -704,7 +704,7 @@ done
 
 Run the script every time a new service account is added to your cluster.
 
-== Reference Hardened K3s Template Configuration
+== Reference Hardened {k3s-product-name} Template Configuration
 
 The following reference template configuration is used in Rancher to create a hardened K3s custom cluster based on each CIS control in this guide. This reference does not include other required *cluster configuration* directives, which vary based on your environment.
 
