--- a/versions/latest/modules/zh/pages/about-rancher/architecture/recommendations.adoc
+++ b/versions/latest/modules/zh/pages/about-rancher/architecture/recommendations.adoc
@@ -18,7 +18,7 @@ image:rancher-architecture-separation-of-rancher-server.svg[分开部署 Rancher
 
 我们不建议在单个 Docker 容器中安装 Rancher，因为如果该节点发生故障，则其他节点上将没有可用的集群数据副本，并且你可能会丢失 Rancher Server 上的数据。
 
-=== K3s Kubernetes 集群安装
+=== {k3s-product-name} Kubernetes 集群安装
 
 底层 Kubernetes 集群的一种选择是使用 K3s Kubernetes。K3s 是 Rancher CNCF 认证的 Kubernetes 发行版。K3s 易于安装，仅需要 Kubernetes 内存的一半，所有组件都在一个小于 100 MB 的二进制文件中。K3s 的另一个优点是允许外部 Datastore 保存集群数据，因此可以把 K3s 服务器节点视为无状态。
 
@@ -57,7 +57,7 @@ image:ha/rancher2ha.svg[Rancher HA]
 
 如果 Rancher 安装在 K3s Kubernetes 或 RKE Kubernetes 集群上，以下建议适用。
 
-=== K3s 集群角色
+=== {k3s-product-name} 集群角色
 
 在 K3s 集群中有两种类型的节点，分别是 Server 节点和 Agent 节点。你可以把工作负载调度到 Server 节点和 Agent 节点上。Server 节点运行 Kubernetes master。
 
