--- a/versions/latest/modules/zh/pages/installation-and-upgrade/requirements/port-requirements.adoc
+++ b/versions/latest/modules/zh/pages/installation-and-upgrade/requirements/port-requirements.adoc
@@ -26,7 +26,7 @@ Rancher 可以安装在任何 Kubernetes 集群上。如果你的 Rancher 安装
 ====
 
 
-=== K3s 上 Rancher Server 节点的端口
+=== {k3s-product-name} 上 Rancher Server 节点的端口
 
 .单击展开
 [%collapsible]
