--- a/versions/latest/modules/zh/pages/security/hardening-guides/k3s/k3s.adoc
+++ b/versions/latest/modules/zh/pages/security/hardening-guides/k3s/k3s.adoc
@@ -1,4 +1,4 @@
-= K3s 加固指南
+= {k3s-product-name} 加固指南
 
 本文档提供了针对生产环境的 K3s 集群进行加固的具体指导，以便在使用 Rancher 部署之前进行配置。它概述了满足信息安全中心（Center for Information Security, CIS）Kubernetes benchmark controls 所需的配置和控制。
 
@@ -704,7 +704,7 @@ done
 
 每次向你的集群添加新的 service account 时，运行该脚本。
 
-== 加固版 K3s 模板配置参考
+== 加固版 {k3s-product-name} 模板配置参考
 
 Rancher 使用以下参考模板配置，基于本指南中的每个 CIS 控件创建加固过的自定义 K3s 集群。此参考内容不包括其他必需的**集群配置**指令，这些指令因你的环境而异。
 
