--- a/versions/v2.8/modules/en/pages/installation-and-upgrade/requirements/port-requirements.adoc
+++ b/versions/v2.8/modules/en/pages/installation-and-upgrade/requirements/port-requirements.adoc
@@ -24,7 +24,7 @@ Rancher can be installed on any Kubernetes cluster. For Rancher installs on a K3
 ====
 
 
-=== Ports for Rancher Server Nodes on K3s
+=== Ports for Rancher Server Nodes on {k3s-product-name}
 
 .Click to expand
 [%collapsible]
