--- a/versions/latest/modules/en/pages/installation-and-upgrade/install-kubernetes/k3s-for-rancher.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/install-kubernetes/k3s-for-rancher.adoc
@@ -1,4 +1,4 @@
-= Setting up a High-availability K3s Kubernetes Cluster for Rancher
+= Setting up a High-availability {k3s-product-name} Kubernetes Cluster for Rancher
 
 This section describes how to install a Kubernetes cluster according to the xref:about-rancher/architecture/recommendations.adoc#_environment_for_kubernetes_installations[best practices for the Rancher server environment.]
 
@@ -26,7 +26,7 @@ To specify the K3s (Kubernetes) version, use the INSTALL_K3S_VERSION (e.g., `INS
 
 == Installing Kubernetes
 
-=== 1. Install Kubernetes and Set up the K3s Server
+=== 1. Install Kubernetes and Set up the {k3s-product-name} Server
 
 When running the command to start the K3s Kubernetes API server, you will pass in an option to use the external datastore that you set up earlier.
 
@@ -61,7 +61,7 @@ The datastore endpoint can also be passed in using the environment variable `$K3
      --token "<MAIN_SERVER_NODE_TOKEN>"
 ----
 
-=== 2. Confirm that K3s is Running
+=== 2. Confirm that {k3s-product-name} is Running
 
 To confirm that K3s has been set up successfully, run the following command on either of the K3s server nodes:
 
