--- a/versions/latest/modules/zh/pages/installation-and-upgrade/install-kubernetes/k3s-for-rancher.adoc
+++ b/versions/latest/modules/zh/pages/installation-and-upgrade/install-kubernetes/k3s-for-rancher.adoc
@@ -1,4 +1,4 @@
-= 为 Rancher 设置高可用 K3s Kubernetes 集群
+= 为 Rancher 设置高可用 {k3s-product-name} Kubernetes 集群
 
 本文介绍了如何根据 xref:about-rancher/architecture/recommendations.adoc#_kubernetes_安装环境[Rancher Server 环境的最佳实践]安装 Kubernetes 集群。
 
@@ -26,7 +26,7 @@ Rancher 需要安装在支持的 Kubernetes 版本上。如需了解你使用的
 
 == 安装 Kubernetes
 
-=== 1. 安装 Kubernetes 并设置 K3s Server
+=== 1. 安装 Kubernetes 并设置 {k3s-product-name} Server
 
 在运行启动 K3s Kubernetes API Server 的命令时，你会传入使用之前设置的外部数据存储的选项。
 
@@ -61,7 +61,7 @@ cat /var/lib/rancher/k3s/server/token
     --token "<MAIN_SERVER_NODE_TOKEN>"
 ----
 
-=== 2. 检查 K3s 是否正常运行
+=== 2. 检查 {k3s-product-name} 是否正常运行
 
 在其中一个 K3s Server 节点上运行以下命令，来确认 K3s 是否已经设置成功：
 
