--- a/versions/latest/modules/zh/pages/installation-and-upgrade/quick-start/deploy-rancher/helm-cli.adoc
+++ b/versions/latest/modules/zh/pages/installation-and-upgrade/quick-start/deploy-rancher/helm-cli.adoc
@@ -10,7 +10,7 @@
 
 完整的安装要求在xref:installation-and-upgrade/requirements/requirements.adoc[这里]。
 
-== 在 Linux 上安装 K3s
+== 在 Linux 上安装 {k3s-product-name}
 
 Rancher 需要安装在支持的 Kubernetes 版本上。如需了解你使用的 Rancher 版本支持哪些 Kubernetes 版本，请参见 https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/[Rancher 支持矩阵]。
 
