--- a/versions/latest/modules/zh/pages/integrations/kubernetes-distributions.adoc
+++ b/versions/latest/modules/zh/pages/integrations/kubernetes-distributions.adoc
@@ -1,10 +1,9 @@
 = Kubernetes 发行版
 
-== K3s
-
+== {k3s-long-product-name}
 K3s 是一款轻量级、完全兼容的 Kubernetes 发行版，专为一系列用例设计，包括边缘计算、物联网、CI/CD、开发和将 Kubernetes 嵌入到应用程序中。它将系统打包为单个二进制文件，使用 sqlite3 作为默认存储，并提供用户友好的启动器，从而简化了 Kubernetes 的管理。K3s 包括 Local Storage 和负载均衡、Helm Chart 控制器和 Traefik CNI 等基本功能。它最大限度地减少了外部依赖，并提供了精简的 Kubernetes 体验。K3s 于 2020 年 6 月作为沙箱项目捐赠给 CNCF。
 
-=== K3s 与 Rancher
+=== {k3s-product-name} 与 Rancher
 
 * Rancher 允许在一系列平台上轻松配置 K3s，包括 Amazon EC2、DigitalOcean、Azure、vSphere 或现有服务器。
 * Kubernetes 集群的标准 Rancher 管理，包括所有概述xref:cluster-deployment/cluster-deployment.adoc#_不同类型集群的管理功能[集群管理功能]。
