--- a/versions/v2.8/modules/en/pages/about-rancher/architecture/recommendations.adoc
+++ b/versions/v2.8/modules/en/pages/about-rancher/architecture/recommendations.adoc
@@ -18,7 +18,7 @@ We recommend installing the Rancher server on a high-availability Kubernetes clu
 
 We don't recommend installing Rancher in a single Docker container, because if the node goes down, there is no copy of the cluster data available on other nodes and you could lose the data on your Rancher server.
 
-=== K3s Kubernetes Cluster Installations
+=== {k3s-product-name} Kubernetes Cluster Installations
 
 One option for the underlying Kubernetes cluster is to use K3s Kubernetes. K3s is Rancher's CNCF certified Kubernetes distribution. It is easy to install and uses half the memory of Kubernetes, all in a binary of less than 100 MB. Another advantage of K3s is that it allows an external datastore to hold the cluster data, allowing the K3s server nodes to be treated as ephemeral.
 
@@ -57,7 +57,7 @@ For the best performance and greater security, we recommend a dedicated Kubernet
 
 The below recommendations apply when Rancher is installed on a K3s Kubernetes cluster or an RKE Kubernetes cluster.
 
-=== K3s Cluster Roles
+=== {k3s-product-name} Cluster Roles
 
 In K3s clusters, there are two types of nodes: server nodes and agent nodes. Both servers and agents can have workloads scheduled on them. Server nodes run the Kubernetes master.
 
