--- a/versions/v2.8/modules/en/pages/installation-and-upgrade/infrastructure-setup/ha-k3s-kubernetes-cluster.adoc
+++ b/versions/v2.8/modules/en/pages/installation-and-upgrade/infrastructure-setup/ha-k3s-kubernetes-cluster.adoc
@@ -1,4 +1,4 @@
-= Setting up Infrastructure for a High Availability K3s Kubernetes Cluster
+= Setting up Infrastructure for a High Availability {k3s-product-name} Kubernetes Cluster
 
 This tutorial is intended to help you provision the underlying infrastructure for a Rancher management server.
 
