--- a/versions/v2.8/modules/en/pages/installation-and-upgrade/quick-start/deploy-rancher/helm-cli.adoc
+++ b/versions/v2.8/modules/en/pages/installation-and-upgrade/quick-start/deploy-rancher/helm-cli.adoc
@@ -10,7 +10,7 @@ Your Linux machine can be anywhere. It could be an Amazon EC2 instance, a Digita
 
 The full installation requirements are xref:installation-and-upgrade/requirements/requirements.adoc[here].
 
-== Install K3s on Linux
+== Install {k3s-product-name} on Linux
 
 Rancher needs to be installed on a supported Kubernetes version. To find out which versions of Kubernetes are supported for your Rancher version, refer to the https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/[Rancher Support Matrix].
 
