--- a/versions/v2.8/modules/en/pages/integrations/kubernetes-distributions.adoc
+++ b/versions/v2.8/modules/en/pages/integrations/kubernetes-distributions.adoc
@@ -1,10 +1,9 @@
 = Kubernetes Distributions
 
-== K3s
-
+== {k3s-long-product-name}
 K3s is a lightweight, fully compliant Kubernetes distribution designed for a range of use cases, including edge computing, IoT, CI/CD, development and embedding Kubernetes into applications. It simplifies Kubernetes management by packaging the system as a single binary, using sqlite3 as the default storage, and offering a user-friendly launcher. K3s includes essential features like local storage and load balancing, Helm chart controller and the Traefik CNI. It minimizes external dependencies and provides a streamlined Kubernetes experience. K3s was donated to the CNCF as a Sandbox Project in June 2020.
 
-=== K3s with Rancher
+=== {k3s-product-name} with Rancher
 
 * Rancher allows easy provision of K3s across a range of platforms including Amazon EC2, DigitalOcean, Azure, vSphere, or existing servers.
 * Standard Rancher management of Kubernetes clusters including all outlined xref:cluster-deployment/cluster-deployment.adoc#_cluster_management_capabilities_by_cluster_type[cluster management capabilities].
