--- a/versions/v2.8/modules/en/pages/security/hardening-guides/hardening-guides.adoc
+++ b/versions/v2.8/modules/en/pages/security/hardening-guides/hardening-guides.adoc
@@ -67,7 +67,7 @@ Each self-assessment guide is accompanied by a hardening guide. These guides wer
 | https://docs.rke2.io/security/hardening_guide[Link]
 |===
 
-=== K3s Guides
+=== {k3s-product-name} Guides
 
 |===
 | Type | Kubernetes Version | CIS Benchmark Version | Self Assessment Guide | Hardening Guides
