--- a/versions/v2.8/modules/zh/pages/security/hardening-guides/k3s/self-assessment-guide-with-cis-v1.24-k8s-v1.24.adoc
+++ b/versions/v2.8/modules/zh/pages/security/hardening-guides/k3s/self-assessment-guide-with-cis-v1.24-k8s-v1.24.adoc
@@ -1,4 +1,4 @@
-= K3s 自我评估指南 - CIS Benchmark v1.24 - K8s v1.24
+= {k3s-product-name} 自我评估指南 - CIS Benchmark v1.24 - K8s v1.24
 
 本文档是 xref:security/hardening-guides/k3s/k3s.adoc[K3s 加固指南]的配套文档，该指南提供了关于如何加固正在生产环境中运行并由 Rancher 管理的 K3s 集群的指导方针。本 benchmark 指南可帮助你根据 CIS Kubernetes Benchmark 中的每个 control 来评估加固集群的安全性。
 
