--- a/versions/latest/modules/en/pages/integrations/fleet/overview.adoc
+++ b/versions/latest/modules/en/pages/integrations/fleet/overview.adoc
@@ -8,7 +8,7 @@ Fleet is a separate project from Rancher, and can be installed on any Kubernetes
 
 For information about how Fleet works, see the xref:integrations/fleet/architecture.adoc[Architecture] page.
 
-== Accessing Fleet in the Rancher UI
+== Accessing {fleet-product-name} in the Rancher UI
 
 Fleet comes preinstalled in Rancher and is managed by the *Continuous Delivery* option in the Rancher UI. For additional information on Continuous Delivery and other Fleet troubleshooting tips, refer https://fleet.rancher.io/troubleshooting[here].
 
@@ -33,7 +33,7 @@ For details on support for clusters with Windows nodes, see the xref:integration
 
 The Fleet Helm charts are available https://github.com/rancher/fleet/releases[here].
 
-== Using Fleet Behind a Proxy
+== Using {fleet-product-name} Behind a Proxy
 
 For details on using Fleet behind a proxy, see the xref:integrations/fleet/use-fleet-behind-a-proxy.adoc[Using Fleet Behind a Proxy] page.
 
