--- a/versions/latest/modules/zh/pages/rancher-admin/back-up-restore-and-disaster-recovery/usage-guide.adoc
+++ b/versions/latest/modules/zh/pages/rancher-admin/back-up-restore-and-disaster-recovery/usage-guide.adoc
@@ -121,7 +121,7 @@ Rancher Backups Chart 包含了一个link:https://github.com/rancher/backup-rest
 ====
 
 
-=== Fleet、{harvester-product-name} 和其他服务
+=== {fleet-product-name}、{harvester-product-name} 和其他服务
 
 由 Rancher Backups 支持的其他服务会经常发生变化和发展。发生这种情况时，他们的资源和备份需求也可能会发生变化。有些资源可能根本不需要备份。团队需要在开发过程中考虑这一点，并评估相关 resourceSet 是否能正确捕获正确的资源集来还原其服务。
 
