--- a/versions/latest/modules/en/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
@@ -198,7 +198,7 @@ Repeat the below steps for each downstream cluster:
   *** RKE: Use the https://github.com/rancherlabs/support-tools/tree/master/how-to-retrieve-kubeconfig-from-custom-cluster[steps in the document here] to generate a kubeconfig
   *** RKE2/K3s: Use the kubeconfig populated during installation
 
-=== 5. Force Update Fleet clusters to reconnect the fleet-agent to Rancher
+=== 5. Force Update {fleet-product-name} clusters to reconnect the fleet-agent to Rancher
 
 Select 'Force Update' for the clusters within the xref:integrations/fleet/overview.adoc#_accessing_fleet_in_the_rancher_ui[Continuous Delivery] view of the Rancher UI to allow the fleet-agent in downstream clusters to successfully connect to Rancher.
 
@@ -290,7 +290,7 @@ The below steps update the Helm values for the Rancher chart, so the Rancher pod
 
 As a private CA is no longer being used, the `CATTLE_CA_CHECKSUM` environment variable on the downstream cluster agents should be removed or set to "" (an empty string).
 
-=== 5. Force Update Fleet clusters to reconnect the fleet-agent to Rancher
+=== 5. Force Update {fleet-product-name} clusters to reconnect the fleet-agent to Rancher
 
 Select 'Force Update' for the clusters within the xref:integrations/fleet/overview.adoc#_accessing_fleet_in_the_rancher_ui[Continuous Delivery] view of the Rancher UI to allow the fleet-agent in downstream clusters to successfully connect to Rancher.
 
