--- a/versions/v2.8/modules/en/pages/cluster-admin/manage-clusters/cluster-templates.adoc
+++ b/versions/v2.8/modules/en/pages/cluster-admin/manage-clusters/cluster-templates.adoc
@@ -80,7 +80,7 @@ If you are a restricted admin and don't have access to the `local` cluster, you 
 
 You can update any clusters using a template from the menu:Apps[Installed Apps] page, given there is a new version of a template being used by those clusters.
 
-== Deploying Clusters from a Template with Fleet
+== Deploying Clusters from a Template with {fleet-product-name}
 
 [NOTE]
 .Prerequisites:
