--- a/versions/v2.8/modules/en/pages/integrations/fleet/use-fleet-behind-a-proxy.adoc
+++ b/versions/v2.8/modules/en/pages/integrations/fleet/use-fleet-behind-a-proxy.adoc
@@ -1,4 +1,4 @@
-= Using Fleet Behind a Proxy
+= Using {fleet-product-name} Behind a Proxy
 
 In this section, you'll learn how to enable Fleet in a setup that has a Rancher server with a public IP a Kubernetes cluster that has no public IP, but is configured to use a proxy.
 
