--- a/versions/v2.8/modules/zh/pages/cluster-deployment/configuration/rke1.adoc
+++ b/versions/v2.8/modules/zh/pages/cluster-deployment/configuration/rke1.adoc
@@ -186,7 +186,7 @@ Rancher v2.6 引入了link:https://rancher.com/docs/rke/latest/en/config-options
 
 如果 `ingress-nginx` 的 `updateStrategy` 是 `OnDelete`，则需要删除这些 pod 以获得 deployment 正确的版本。
 
-=== Cluster Agent 配置和 Fleet Agent 配置
+=== Cluster Agent 配置和 {fleet-product-name} Agent 配置
 
 你可以为 Cluster Agent 和集群的 Fleet Agent 配置调度字段和资源限制。你可以使用这些字段来自定义容忍度、亲和性规则和资源要求。其他容忍度会被尾附到默认容忍度和 Control Plane 节点污点的列表中。如果你定义了自定义亲和性规则，它们将覆盖全局默认亲和性设置。定义资源要求会在以前没有的地方设置请求或限制。
 
