--- a/versions/v2.8/modules/zh/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
+++ b/versions/v2.8/modules/zh/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
@@ -196,7 +196,7 @@ kubectl edit -n cattle-system deployment/cattle-cluster-agent
   *** RKE：使用link:https://github.com/rancherlabs/support-tools/tree/master/how-to-retrieve-kubeconfig-from-custom-cluster[此处文档中的步骤]生成 kubeconfig
   *** RKE2/K3s：使用安装时填充的 kubeconfig
 
-=== 5. 强制更新 Fleet 集群，从而将 fleet-agent 重新连接到 Rancher
+=== 5. 强制更新 {fleet-product-name} 集群，从而将 fleet-agent 重新连接到 Rancher
 
 在 Rancher UI 的xref:integrations/fleet/overview.adoc#_在_rancher_ui_中访问_fleet[持续交付]中，为集群选择"`强制更新`"，来允许下游集群中的 fleet-agent 成功连接到 Rancher。
 
@@ -288,7 +288,7 @@ helm ls -n cattle-system
 
 由于不再使用私有 CA，因此你需要删除下游集群 agent 上的 `CATTLE_CA_CHECKSUM` 环境变量，或将其设置为 ""（空字符串）。
 
-=== 5. 强制更新 Fleet 集群，从而将 fleet-agent 重新连接到 Rancher
+=== 5. 强制更新 {fleet-product-name} 集群，从而将 fleet-agent 重新连接到 Rancher
 
 在 Rancher UI 的xref:integrations/fleet/overview.adoc#_在_rancher_ui_中访问_fleet[持续交付]中，为集群选择"`强制更新`"，来允许下游集群中的 fleet-agent 成功连接到 Rancher。
 
