--- a/versions/v2.8/modules/zh/pages/integrations/fleet/use-fleet-behind-a-proxy.adoc
+++ b/versions/v2.8/modules/zh/pages/integrations/fleet/use-fleet-behind-a-proxy.adoc
@@ -1,4 +1,4 @@
-= 在代理后使用 Fleet
+= 在代理后使用 {fleet-product-name}
 
 在本节中，你将学习如何在具有公共 IP 的 Rancher 服务器，以及一个没有公共 IP 但配置为使用代理的 Kubernetes 集群的设置中启用 Fleet。
 
