--- a/versions/latest/modules/en/pages/integrations/cluster-api/overview.adoc
+++ b/versions/latest/modules/en/pages/integrations/cluster-api/overview.adoc
@@ -66,7 +66,7 @@ spec:
 kubectl apply -f feature.yaml
 ----
 
-== Installing the Rancher Turtles Operator
+== Installing the {turtles-product-name} Operator
 
 You can install the Rancher Turtles operator via the Rancher UI, or with Helm. The first method is recommended for most environments.
 
@@ -115,7 +115,7 @@ The CAPI Operator is required for installing Rancher Turtles. You can choose whe
 
 The CAPI Operator allows for handling the lifecycle of https://turtles.docs.rancher.com/tasks/capi-operator/installing_core_provider[CAPI providers] using a declarative approach, extending the capabilities of `clusterctl`. If you want to learn more about it, you can refer to https://cluster-api-operator.sigs.k8s.io/[Cluster API Operator book].
 
-==== Installing Rancher Turtles with `Cluster API (CAPI) Operator` as a Helm dependency
+==== Installing {turtles-product-name} with `Cluster API (CAPI) Operator` as a Helm dependency
 
 . Add the Helm repository containing the `rancher-turtles` chart as the first step in installation:
 +
@@ -185,7 +185,7 @@ For detailed information on the values supported by the chart and their usage, r
 ====
 
 
-==== Installing Rancher Turtles without `Cluster API (CAPI) Operator` as a Helm dependency
+==== Installing {turtles-product-name} without `Cluster API (CAPI) Operator` as a Helm dependency
 
 [NOTE]
 ====
@@ -220,7 +220,7 @@ The previous commands tell Helm to ignore installing `cluster-api-operator` as a
 +
 * `rancher-turtles-controller`
 
-== Uninstalling Rancher Turtles
+== Uninstalling {turtles-product-name}
 
 [CAUTION]
 ====
