--- a/versions/latest/modules/zh/pages/integrations/cluster-api/overview.adoc
+++ b/versions/latest/modules/zh/pages/integrations/cluster-api/overview.adoc
@@ -66,7 +66,7 @@ spec:
 kubectl apply -f feature.yaml
 ----
 
-== 安装 Rancher Turtles Operator
+== 安装 {turtles-product-name} Operator
 
 你可以通过 Rancher UI 或使用 Helm 安装 Rancher Turtles operator。对于大多数环境推荐使用第一种方法。
 
@@ -116,7 +116,7 @@ kubectl apply -f feature.yaml
 
 CAPI Operator 允许使用声明式方法处理 CAPI provider 的生命周期，扩展了 `clusterctl` 的能力。如果你想了解更多相关内容，可以参考 https://cluster-api-operator.sigs.k8s.io/[Cluster API Operator book]。
 
-==== 使用 `Cluster API (CAPI) Operator` 作为 Helm 依赖项安装 Rancher Turtles
+==== 使用 `Cluster API (CAPI) Operator` 作为 Helm 依赖项安装 {turtles-product-name}
 
 . 添加包含 `rancher-turtles` chart 的 Helm 仓库作为安装的第一步：
 +
@@ -187,7 +187,7 @@ stringData:
 ====
 
 
-==== 不使用 `Cluster API (CAPI) Operator` 作为 Helm 依赖安装 Rancher Turtles
+==== 不使用 `Cluster API (CAPI) Operator` 作为 Helm 依赖安装 {turtles-product-name}
 
 [NOTE]
 ====
@@ -222,7 +222,7 @@ helm install rancher-turtles turtles/rancher-turtles --version <version>
 +
 * `rancher-turtles-controller`
 
-== 卸载 Rancher Turtles
+== 卸载 {turtles-product-name}
 
 [CAUTION]
 ====
