--- a/versions/v2.8/modules/en/pages/integrations/cluster-api/cluster-api.adoc
+++ b/versions/v2.8/modules/en/pages/integrations/cluster-api/cluster-api.adoc
@@ -1,4 +1,4 @@
-= Cluster API (CAPI) with Rancher Turtles
+= {turtles-product-name}
 
 https://turtles.docs.rancher.com/[Rancher Turtles] is a https://kubernetes.io/docs/concepts/extend-kubernetes/operator/#operators-in-kubernetes[Kubernetes Operator] that manages the lifecycle of provisioned Kubernetes clusters, by providing integration between your Cluster API (CAPI) and Rancher. With Rancher Turtles, you can:
 
