--- a/versions/latest/modules/en/pages/integrations/kubewarden.adoc
+++ b/versions/latest/modules/en/pages/integrations/kubewarden.adoc
@@ -16,7 +16,7 @@ Kubewarden's upstream Helm charts are fully integrated as Rancher Apps, providin
 
 Kubewarden provides a full replacement of the removed Kubernetes Pod Security Policies. Kubewarden also integrates with the new Pod Security Admission feature introduced by a recent version of Kubernetes by augmenting its security capabilities.
 
-== {kubewarden-product-name} with Rancher Prime
+== {kubewarden-product-name} with {rancher-prime}
 
 The available Rancher UI Extension for Kubewarden integrates it into the Rancher UI. The UI Extension automates the installation and configuration of the Kubewarden stack and configures access to the policies maintained by SUSE. The UI Extension provides access to a curated catalog of ready-to-use policies. Using the UI Extension, one can browse, install, and configure these policies.
 
