--- a/versions/latest/modules/en/pages/integrations/neuvector/neuvector.adoc
+++ b/versions/latest/modules/en/pages/integrations/neuvector/neuvector.adoc
@@ -11,7 +11,7 @@ With NeuVector and Rancher:
 * Deploy, manage and secure multiple clusters.
 * Manage and report vulnerabilities and compliance results for Rancher workloads and nodes.
 
-== {neuvector-product-name} Prime with Rancher Prime
+== {neuvector-product-name} Prime with {rancher-prime}
 
 The NeuVector UI Extension for Rancher Manager is available and supported for Rancher Prime and NeuVector Prime customers. This extension provides:
 
