--- a/versions/latest/modules/zh/pages/integrations/neuvector/neuvector.adoc
+++ b/versions/latest/modules/zh/pages/integrations/neuvector/neuvector.adoc
@@ -11,7 +11,7 @@ NeuVector 是唯一一个100%开源、零信任的容器安全平台。在整个
 * 部署、管理和保护多个集群。
 * 管理和报告 Rancher 工作负载和节点的漏洞和合规性结果。
 
-== {neuvector-product-name} Prime 和 Rancher Prime
+== {neuvector-product-name} Prime 和 {rancher-prime}
 
 Rancher Manager 的 NeuVector UI 扩展可用于并支持 Rancher Prime 和 NeuVector Prime 客户。此扩展提供：
 
