--- a/versions/v2.8/modules/en/pages/integrations/elemental.adoc
+++ b/versions/v2.8/modules/en/pages/integrations/elemental.adoc
@@ -18,7 +18,7 @@ Elemental in Rancher:
 * Elemental allows cloud-native management for machines in datacenters and on the edge.
 * Elemental is flexible and allows platform teams to perform all kind of workflows across their fleet of machines.
 
-== {elemental-product-name} with Rancher Prime
+== {elemental-product-name} with {rancher-prime}
 
 * Deeply integrated already as GUI Extension in Rancher.
 * Extends the Rancher story to the OS. Working perfectly with SLE Micro for Rancher today.
