--- a/versions/v2.8/modules/en/pages/integrations/fleet/fleet.adoc
+++ b/versions/v2.8/modules/en/pages/integrations/fleet/fleet.adoc
@@ -12,7 +12,7 @@ Many users often manage over 10 clusters at a time. Given the proliferation of c
 * I am a platform operator and want to provision clusters with all components using a scalable and safe operating model (GitOps).
 * I am an application developer and want my latest changes to automatically go into my development environment.
 
-== {fleet-product-name} with Rancher Prime
+== {fleet-product-name} with {rancher-prime}
 
 Fleet is already deeply integrated as the Continuous Delivery tool and GitOps Engine in Rancher.
 
