--- a/versions/v2.8/modules/zh/pages/integrations/elemental.adoc
+++ b/versions/v2.8/modules/zh/pages/integrations/elemental.adoc
@@ -18,7 +18,7 @@ Rancher 中的 Elemental：
 * Elemental 允许对数据中心和边缘的机器进行云原生管理。
 * Elemental 非常灵活，允许平台团队在其机器群中执行各种工作流。
 
-== {elemental-product-name} 和 Rancher Prime
+== {elemental-product-name} 和 {rancher-prime}
 
 * 已作为 GUI 扩展深度集成到 Rancher 中。
 * 将 Rancher 的用例扩展到操作系统，如今 SLE Micro 与 Rancher 可以完美配合。
