--- a/versions/v2.8/modules/zh/pages/integrations/kubewarden.adoc
+++ b/versions/v2.8/modules/zh/pages/integrations/kubewarden.adoc
@@ -16,7 +16,7 @@ Kubewarden 的上游 Helm Chart 完全集成为 Rancher 应用程序，为安装
 
 Kubewarden 提供了对已删除的 Kubernetes Pod 安全策略的完全替换。 Kubewarden 还通过增强其安全功能，与最新版本的 Kubernetes 引入的新 Pod Security Admission 功能进行了集成。
 
-== {kubewarden-product-name} 和 Rancher Prime
+== {kubewarden-product-name} 和 {rancher-prime}
 
 Kubewarden 的 Rancher UI 扩展将其集成到 Rancher UI 中。UI 扩展可自动安装和配置 Kubewarden 堆栈，并配置对 SUSE 维护的策略的访问。UI 扩展提供了对现成策略的策划目录的访问。使用 UI 扩展，人们可以浏览、安装和配置这些策略。
 
